# pep723-to-wheel

./: .gitignore  AGENTS.md  Makefile  README.md  copier.yml  pyproject.toml
.github/workflows/: cd.yml  cd_version.py  ci.yml  ruff-autofix.yml
src/pep723_to_wheel/: cli.py  core.py
src/{{ package_name }}/: __init__.py  cli.py
tests/: test_cd_version.py  test_core.py  test_{{ package_name }}.py
tests/examples/: marimo_notebook.py
