[project]
name = "pep723-to-wheel"
version = "0.1.0"
description = "PoC for pep-723 script to wheel and back"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.21.1",
]

[project.scripts]
pep723-to-wheel = "pep723_to_wheel.cli:app"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pep723_to_wheel"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.9.10",
    "ty>=0.0.14",
]
